# crypto-price-predictor

./: .gitignore  README.md  pyproject.toml
src/: predict.py  telegram-bot.py
